# MarketData

./: CMakeLists.txt  README.md
include/: Candle.h  MarketData.h
src/: CMakeLists.txt  MarketData.cpp
